--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <meta name="keywords" content="HTML, CSS,">
     <meta name="author" content="N.kvachantiradze">
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Coder</title>
 </head>
 <body>
-    
+    <section class="sec-01">
+        <div class="container">
+            <p class="test1">
+                Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Atque tenetur sapiente 
+                ad odit modi obcaecati minima rem perspiciatis! 
+                Nihil, illo eaque nam repellat totam delectus? 
+                Perferendis eaque quam cumque ab!
+            </p>
+        </div>
+    </section>
 </body>
 </html>
