--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
     <meta name="description" content="coder">
     <meta name="keywords" content="HTML, CSS,">
     <meta name="author" content="N.kvachantiradze">
@@ -12,16 +11,51 @@
     <title>Coder</title>
 </head>
 <body>
-    <section class="sec-01">
-        <div class="container">
-            <p class="test1">
-                Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Atque tenetur sapiente 
-                ad odit modi obcaecati minima rem perspiciatis! 
-                Nihil, illo eaque nam repellat totam delectus? 
-                Perferendis eaque quam cumque ab!
-            </p>
+   <header class="header-section">
+       <a class="logo" href="index.html">
+           <img class="logo-img" src="./img/Group 205.svg" alt="image">
+       </a> 
+       <nav class="navbar">
+            <ul class="nav-ul">
+                <li class="nav-li">
+                    <a class="nav-a" href="#">About Me</a>
+                </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="#">Services</a>
+                </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="#">Portfolio</a>
+                </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="#">Testimonials</a>
+                </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="#">Blog</a>
+                </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="#">Contact Us</a>
+                </li>
+                <button class="btn-header">Hire Me!</button>
+                
+            </ul>
+       </nav>
+   </header>
+   <section class="banner-section">
+        <div class="left-block">
+            <button class="childe-box-01"> Hello, I am <i class="fas fa-caret-square-down arr"></i></button>
+            <h3 class="mr-h3">Mr. John Weary</h3>
+            <p class="prof-p">A Professional Web Developer and UI/UX Designer.</p>
+            <div class="left-firschild">
+                <button class="left-btn">Download CV</button>
+                <button class="left-01btn">My Work</button>
+            </div>
         </div>
-    </section>
+        <div class="right-block">
+            <img class="right-img" src="img/man-wearing-black-bow-tie-2330079.png" alt="image">
+        </div>
+        <div class="btn-wrapper">
+            <button class="btn-child"></button>
+        </div>
+   </section>
 </body>
 </html>
