--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
         <div class="right-block">
             <img class="right-img" src="img/man-wearing-black-bow-tie-2330079.png" alt="image">
         </div>
-        <div class="btn-wrapper">
-            <button class="btn-child"></button>
-        </div>
+       
    </section>
+   <div class="btn-wrapper">
+    <button class="btn-child">
+        <i class="fas fa-arrow-down"></i>
+    </button>
+</div>
 </body>
 </html>
