--- a/index.html
+++ b/index.html
@@ -66,8 +66,44 @@
     </button>
 </div>
 <!-- banner-section end  -->
+<!-- section-01  -->
 <section class="section-01">
-    
+    <div class="left-block">
+        <img class="left-img" src="img/shutterstock_407505481.png" alt="image">
+        <div class="childe-el">
+            <div class="small-wrapper">
+                <div class="small-box"></div>
+                <div class="small-box"></div>
+                <div class="small-box"></div>
+                <div class="small-box"></div>
+            </div>
+                <p class="p-06">06
+                Years of 
+                Experience
+            </p>
+        </div>
+    </div>
+    <div class="right-block">
+        <h3 class="right-title">
+            Read About My Life
+            Struggle Story!
+        </h3>
+        <p class="right-p">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo 
+            inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.
+        </p>
+        <div class="line">
+            <h2 class="line-title">SCSS 100%</h2>
+            <hr class="line-01">
+            <h2 class="line-title-01">HTML 60%</h2>
+            <hr class="line-02">
+            <h2 class="line-title-02">CSS 70%</h2>
+            <hr class="line-03">
+        </div>
+        <button class="right-btn1" type="button"> Hire Me!</button>
+        <button class="right-btn2" type="menu">About Me</button>
+    </div>
 </section>
+<!-- section-01 end  -->
 </body>
 </html>
