end section-01 responsive

--- a/index.html
+++ b/index.html
@@ -105,5 +105,10 @@
     </div>
 </section>
 <!-- section-01 end  -->
+<!-- section-02  -->
+<section class="section-02">
+
+</section>
+<!-- section-02 end  -->
 </body>
 </html>
