--- a/index.html
+++ b/index.html
@@ -107,7 +107,82 @@
 <!-- section-01 end  -->
 <!-- section-02  -->
 <section class="section-02">
+    <div class="sec-02-title">
+        <h4 class="sec-title-01">Our Services</h4>
+        <p class="sec-02-p">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the quasi 
+        </p>
+        <p class="sec-02-p1">architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+</section>
+<section class="sec-02">
+    <div class="div-wrapper">
+        <button class="firs-btn" type="menu">
+            <i class="fab fa-wordpress-simple"></i>
+            Wordpress
+            <i class="fas fa-long-arrow-alt-right arrow-02"></i>
+        </button>
+        <button class="second-btn" type="menu">
+            <i class="fab fa-html5"></i>
+            HTML
+            <i class="fas fa-long-arrow-alt-right arrow-03"></i>
+        </button>
+        <button class="therd-btn">
+            <i class="fas fa-code coder"></i>
+            Web Developement
+            <i class="fas fa-long-arrow-alt-right arrow-04"></i>
+        </button>
+    </div>
+    <div class="wrapper">
+        <button class="firs-btn" type="menu">
+            <i class="fab fa-css3-alt"></i>
+            CSS
+            <i class="fas fa-long-arrow-alt-right arrow-05"></i>
+        </button>
+        <button class="second-btn" type="menu">
+            <i class="fas fa-code coder"></i>
+            scss
+            <i class="fas fa-long-arrow-alt-right arrow-06"></i>
+        </button>
+        <button class="therd-btn" type="menu">
+            <i class="fas fa-times-circle"></i>
+            Problem Solving
+            <i class="fas fa-long-arrow-alt-right arrow-07"></i>
+        </button>
+    </div>
+    <div class="btn-pranet">
+        <button class="btn-bottom">View All</button>
+    </div>
+    <div class="box-wrapper">
+        <div class="first-box">
+            <p class="firs-p">
+                50+
+            </p>
+            <p class="first-p-01">Clients</p>
+        </div>
+        <div class="sec-box">
+            <p class="sec-p">
+                68
+               
+            </p>
+            <p class="sec-p2">
+                projects
+            </p>
+        </div>
+        <div class="therd-box">
+            <p class="therd-p">
+                30
 
+            </p>
+            <p class="therd-p1">Awards</p>
+        </div>
+        <div class="forth-box">
+            <p class="forth-p">06</p>
+            <p class="forth-p1">
+                Years Experience
+            </p>
+        </div>
+    </div>
 </section>
 <!-- section-02 end  -->
 </body>
