--- a/index.html
+++ b/index.html
@@ -185,5 +185,12 @@
     </div>
 </section>
 <!-- section-02 end  -->
+<!-- section-03  -->
+<section class="section-03">
+    <div class="content-wrapper">
+        
+    </div>
+</section>
+<!-- section-03 end  -->
 </body>
 </html>
