--- a/index.html
+++ b/index.html
@@ -252,5 +252,17 @@
         </button>
 </div>
 <!-- section-03 end  -->
+<!-- section-04  -->
+<section class="section-04">
+        <div class="content-title">
+            <h3 class="title-h3">Testimonials</h3>
+            <p class="title-p">
+                Sed ut perspiciatis unde omnis iste natus error sit
+                 voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.
+
+            </p>
+        </div>
+</section>
+<!-- section-04 end  -->
 </body>
 </html>
