--- a/index.html
+++ b/index.html
@@ -262,7 +262,90 @@
 
             </p>
         </div>
+
+</section>
+<section class="sec-04">
+    <div class="sec-04-content">
+        <div class="content-img">
+            <img class="img" src="img/Mask Group 1.png" alt="image">
+        </div>
+        <h3 class="title-h3">John Doe</h3>
+        <p class="sec-title">CEO Abc Company</p>
+       <p class="content-p">
+        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos
+        dolores et quas molestias excepturi sint
+        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem 
+       rerum facilis est et expedita distinctio.
+       </p>
+        <button class="content-btn" type="menu">
+            read more
+            <i class="fas fa-arrow-right"></i>
+        </button>
+        
+    </div>
+
 </section>
 <!-- section-04 end  -->
+<!-- sectinon-05  -->
+<section class="section-05">
+    <div class="content-title">
+        <h3 class="titile-03">Latest Blog</h3>
+        <p class="title-p">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore 
+            veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.
+        </p>
+    </div>
+</section>
+    <section class="sec-05">
+            <div class="content-div">
+                    <img class="content-img" src="img/post-6.png" alt="image">
+                    <p class="content-p">
+                        26th October,2019
+                    </p>
+                    <p class="content-par">
+                        I Used The Web For A Day On A
+                            50 MB Budget
+                    </p>
+                    <button class="content-btn" type="menu">
+                        Learn More
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
+            </div>
+            <div class="contetn-02">
+                <img class="content-img" src="img/post-2.png" alt="image">
+                <p class="content-p">
+                    26th October,2019
+                </p>
+                <p class="content-par">
+                    I Used The Web For A Day On A
+                        50 MB Budget
+                </p>
+                <button class="content-btn" type="menu">
+                    Learn More
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+            <div class="contetn-03">
+                <img class="content-img" src="img/post-4.png" alt="image">
+                <p class="content-p">
+                    26th October,2019
+                </p>
+                <p class="content-par">
+                    I Used The Web For A Day On A
+                        50 MB Budget
+                </p>
+                <button class="content-btn" type="menu">
+                    Learn More
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+            
+    </section>
+    <div class="button-div">
+        <button class="btn-div">
+            View All
+        </button>
+    </div>
+<!-- section-05 end  -->
 </body>
 </html>
