--- a/index.html
+++ b/index.html
@@ -286,6 +286,19 @@
 
 </section>
 <!-- section-04 end  -->
+<!-- section-bg  -->
+<section class="bg-section">
+        <div class="bg-div">
+            <div class="div-title">
+                <p class="title-p">Have any Project in Mind?</p>
+                <h4 class="h4-title">I'm Available for Freelancing</h4>
+                <button class="bg-btn">
+                    Hire Me!
+                </button>
+            </div>
+        </div>
+</section>
+<!-- section-bg end  -->
 <!-- sectinon-05  -->
 <section class="section-05">
     <div class="content-title">
