--- a/index.html
+++ b/index.html
@@ -360,5 +360,78 @@
         </button>
     </div>
 <!-- section-05 end  -->
+<!-- footer -->
+<footer class="footer-wrapper">
+    <div class="left-block">
+        <h3 class="footer-tittle">Contact Us</h3>
+        <p class="footer-p">
+            Let's make something new, different and more meaningful
+            or make thing more visual or conceptual?
+        </p>
+        <span class="span-01">
+           <span class="call">
+             <i class="fas fa-phone-volume"></i>
+            </span>
+           <span class="a-first">
+                 <a class="a-tell" href="tel:551919180"> +995 551919180 </a>
+            </span>
+        </span>
+        <span class="span-02">
+            <span class="call">
+                <i class="fas fa-mail-bulk"></i>
+             </span>
+            <span class="a-first">
+                  <a class="a-tell" href="mailto:nikoloz.kvachantiradze17b@geolab.edu.ge"> nikoloz.kvachantiradze17b@geolab.edu.ge</a>
+             </span>
+         </span>
+         <span class="span-03">
+            <span class="call">
+                <i class="fas fa-map-marker-alt"></i>
+             </span>
+            <span class="a-first">
+                  <a class="a-tell" href="https://www.google.com/maps/place/GeoLab/@41.717582,44.7828302,17z/data=!3m1!4b1!4m5!3m4!1s0x404472d4fa5b02d7:0xced15c2c7992ceb5!8m2!3d41.717578!4d44.785019" target="blank"> GeoLab, Merab Aleksidze Street, Tbilisi</a>
+             </span>
+         </span>
+            <h4 class="finde">Find Me on</h4>
+         <div class="social-icon">
+             <a href="https://www.facebook.com/nkvachi" target="blank"><i class="fab fa-facebook-square"></i></a>
+              <a href="mailto:nikoloz.kvachantiradze17b@geolab.edu.ge" ><i class="fab fa-google-plus-square"></i></a>  
+              <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram-square"></i></a>
+              <a href="https://www.youtube.com/" target="blank"><i class="fab fa-youtube"></i></a>
+              <a href="https://www.linkedin.com/" target="blank"><i class="fab fa-linkedin-in"></i></a>
+         </div>
+         
+    </div>
+    <div class="right-block">
+        <h4 class="right-h4">Drop a Line</h4>
+        <form class="footer-form" action="#">
+            <div class="input-first">
+                <label class="label-first" for="email" id="name" >
+                    <input class="firts-input" type="text" id="name" placeholder="Name">
+                </label>
+                <label class="label-sec" for="Email" id="email">
+                    <input class="sec-input" type="Email" id="email"  name="email"placeholder="Email">
+                </label>
+                
+            </div>
+            <div class="inpuit-sec">
+                <label class="first-label" for="phone">
+                    <input class="sec-input" type="number" placeholder="Phone#">
+                </label>
+                <label class="sec-label" for="text">
+                    <input class="sec-input" type="text" placeholder="Budget">
+                </label>
+            </div>
+
+            <div class="textarea-wrapper">
+                <textarea class="text-area"  placeholder="Message"></textarea>
+            </div>
+        </form>
+        <button class="footer-btn" type="submit">
+            Submit
+        </button>
+    </div>
+</footer>
+<!--  end of footer -->
 </body>
 </html>
